Observables and Async pipe added.

--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -2,7 +2,7 @@
   <div class="container">
 
     <a class="navbar-brand" href="#">Social App</a>
-    <ul class="navbar-nav mr-auto" *ngIf="loggedIn">
+    <ul class="navbar-nav mr-auto" *ngIf="accountService.currntUser$ | async">
       <li class="nav-item">
         <a class="nav-link" href="#">Matches</a>
       </li>
@@ -12,12 +12,10 @@
       <li class="nav-item">
         <a class="nav-link" href="#">Messages</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" (click)="logout()"href="#">Logout</a>
-      </li>
+     
     </ul>
 
-    <div class="dropdown" *ngIf="loggedIn" dropdown>
+    <div class="dropdown" *ngIf="accountService.currntUser$ | async" dropdown>
       <a class="dropdown-toggle text-light" dropdownToggle>Welcom user</a>
       <div class="dropdown-menu mt-3"*dropdownMenu>
         <a class="dropdown-item">Edit Profile</a>
@@ -27,10 +25,7 @@
       </div>
     </div>
 
-
-
-
-    <form *ngIf="!loggedIn" #loginForm="ngForm" class="form-inline mt-2 mt-md-0" (ngSubmit)="login()" autocomplete="off">
+    <form *ngIf="(accountService.currntUser$| async) === null" #loginForm="ngForm" class="form-inline mt-2 mt-md-0" (ngSubmit)="login()" autocomplete="off">
       <input name="username" [(ngModel)]="model.username" class="form-control mr-sm-2" type="text"
         placeholder="Username">
       <input name="password"
