--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,17 +1,17 @@
 <div class="container mt-5">
   <div *ngIf="!registerMode" style='text-align: center;'>
-    <h1>Find the person whom you like </h1>
-    <p class="lead">Check here to see all the matches... please sign up!</p>
+    <h1>Find the love of your life here </h1>
+    <p class="lead">Sign Up, Explore, and communicate in real time</p>
     <div class="text-center">
-      <button (click)="registerToggle()"class="btn btn-primary btn-lg mr-2">Register</button>
-      <button class="btn btn-info btn-lg">More</button>
+      <button (click)="registerToggle()" class="btn btn-primary btn-lg mr-2">Register</button>
+      <button class="btn btn-info btn-lg">About</button>
     </div>
   </div>
-<div *ngIf="registerMode" class="container">
+  <div *ngIf="registerMode" class="container">
     <div class="row justify-content-center">
-        <div class="col-4">
-            <p>Register form goes here</p>            
-        </div>
+      <div class="col-4">
+        <app-register (cancelRegister)="cancelRegisterMode($event)"></app-register>
+      </div>
     </div>
-</div>
+  </div>
 </div>
