--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -2,6 +2,10 @@
   <div class="col-4">
     <h1 *ngIf="member">{{member.username}}'s Profile</h1>
   </div>
+  <div class="col-8">
+
+
+  </div>
   <div class="col-4">
     <div class="card">
       <img src="{{member.photoUrl || './assets/user.png'}}" alt="{{member.knownAs}}"
@@ -25,7 +29,8 @@
         </div>
       </div>
       <div class="card-footer">
-        <button class="btn btn-success btn-block">Save</button>
+        <button [disabled]="!editForm.dirty" type="submit" form="editForm"
+          class="btn btn-success btn-block">Save</button>
       </div>
     </div>
   </div>
@@ -33,20 +38,23 @@
   <div class="col-8">
     <tabset class="member-tabset">
       <tab heading='About {{member.knownAs}}'>
-        <form>
+        <form #editForm="ngForm" id="editForm" (ngSubmit)="updateMember()">
           <h4 class="mt-4">Description</h4>
-          <textarea class="form-control" [(ngModel)]="member.introduction" name="introduction" cols="85" rows="10">
-             <h4 class="mt-3">Looking For</h4>
-            <textarea class="form-control" [(ngModel)]="member.lookingFor" name="lookingFor" cols="85" rows="10"></textarea>
-            <h4 class="mt-3">Interests</h4>
-            <textarea class="form-control" [(ngModel)]="member.interests" name="interests" cols="85" rows="10"></textarea>
+          <textarea class="form-control" [(ngModel)]="member.introduction" name="introduction" cols="85"
+            rows="10"></textarea>
+          <h4 class="mt-3">Looking For</h4>
+          <textarea class="form-control" [(ngModel)]="member.lookingFor" name="lookingFor" cols="85"
+            rows="10"></textarea>
+          <h4 class="mt-3">Interests</h4>
+          <textarea class="form-control" [(ngModel)]="member.interests" name="interests" cols="85"
+           rows="10"></textarea>
           <h4 class="mt-3">Location:</h4>
           <div class="col-4">
             <label for="city">City:</label>
-            <input [(ngModel)]="member.city" type="text" name="city" class="form-control mx-2"  >
+            <input [(ngModel)]="member.city" type="text" name="city" class="form-control mb-2">
             <label for="country">Country:</label>
-            <input [(ngModel)]="member.country" type="text" name="country" class="form-control mx-2 mb-4" >
-        </div>
+            <input [(ngModel)]="member.country" type="text" name="country" class="form-control  mb-4">
+          </div>
         </form>
 
       </tab>
@@ -54,10 +62,10 @@
         <h4>Interests</h4>
         <p>{{member.interests}}</p>
       </tab>
-      <tab heading='Photos'>
+      <!-- <tab heading='Photos'>
         <ngx-gallery [options]="galleryOptions" [images]="galleryImages"
           style="display: inline-block; margin-bottom: 20px;"></ngx-gallery>
-      </tab>
+      </tab> -->
     </tabset>
   </div>
 </div>
