--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -3,3 +3,6 @@
 <div class="container" style="margin-top : 100px">
 <router-outlet></router-outlet>
 </div>
+<ngx-spinner>
+    <!-- <h4></h4> -->
+</ngx-spinner>
