--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -58,14 +58,10 @@
         </form>
 
       </tab>
-      <tab heading='Interests'>
-        <h4>Interests</h4>
-        <p>{{member.interests}}</p>
+      <tab heading='Photos'>
+        <app-photo-editor [member]="member"> </app-photo-editor>
+       
       </tab>
-      <!-- <tab heading='Photos'>
-        <ngx-gallery [options]="galleryOptions" [images]="galleryImages"
-          style="display: inline-block; margin-bottom: 20px;"></ngx-gallery>
-      </tab> -->
     </tabset>
   </div>
 </div>
