Photo modify added, nav bar updated.

--- a/client/src/app/nav/nav.component.css
+++ b/client/src/app/nav/nav.component.css
@@ -2,7 +2,9 @@
     cursor: pointer;
 }
 img{
-   
+    max-height: 70px;
+    border-radius: 50%;
     border: 2px solid #fff;
     display: inline;
+    margin-right: 20px;
 }
