--- a/client/src/app/members/photo-editor/photo-editor.component.html
+++ b/client/src/app/members/photo-editor/photo-editor.component.html
@@ -2,8 +2,10 @@
   <div class="col-2" *ngFor="let photo of member.photos">
     <img src="{{photo.url}}" alt="{{photo.url}}" class="img-thumbnail p-1">
     <div class="text-center">
-      <button class="btn btn-sm">Main</button>
-      <button class="btn btn-sm btn-danger"><i class="fa fa-trash"></i></button>
+      <button [disabled]="photo.isMain" (click)="setMainPhoto(photo)"
+        [ngClass]='photo.isMain ? "btn-success active" : "btn-outline-success"' class="btn btn-sm">Primary</button>
+      <button class="btn btn-sm btn-danger" [disabled]="photo.isMain" (click)="deletePhoto(photo.id) ">
+        <i class="fa fa-trash"></i></button>
     </div>
   </div>
 </div>
@@ -27,7 +29,7 @@
 
     <div class="col-md-9" style="margin-bottom: 40px" *ngIf="uploader?.queue?.length ">
 
-     
+
       <p>Number of photos: {{ uploader?.queue?.length }}</p>
 
       <table class="table">
@@ -43,9 +45,9 @@
             <td><strong>{{ item?.file?.name }}</strong></td>
             <td *ngIf="uploader.options.isHTML5" nowrap>{{ item?.file?.size/1024/1024 | number:'.2' }} MB</td>
             <td class="text-center">
-                <span *ngIf="item.isSuccess"><i class="glyphicon glyphicon-ok"></i></span>
-                <span *ngIf="item.isCancel"><i class="glyphicon glyphicon-ban-circle"></i></span>
-                <span *ngIf="item.isError"><i class="glyphicon glyphicon-remove"></i></span>
+              <span *ngIf="item.isSuccess"><i class="glyphicon glyphicon-ok"></i></span>
+              <span *ngIf="item.isCancel"><i class="glyphicon glyphicon-ban-circle"></i></span>
+              <span *ngIf="item.isError"><i class="glyphicon glyphicon-remove"></i></span>
             </td>
 
             <td nowrap>
