--- a/client/src/app/members/member-list/member-list.component.html
+++ b/client/src/app/members/member-list/member-list.component.html
@@ -1,5 +1,61 @@
-<div class="row">
-    <div *ngFor="let member of members$ | async  " class="col-3">
-        <app-member-card [member]="member"></app-member-card>
+<div class="text-center mt-3">
+  <h2>{{pagination?.totalItems}} friend suggestions found</h2>
+</div>
+<div class="container mt-3">
+  <form #form="ngForm" class="form-inline mb-3" (ngSubmit)="loadMembers()" autocomplete="off">
+    <div class="form-group">
+      <label>From:</label>
+      <input type="number" class="form-control " style="width: 110px;  height: 60PX;" name="minAge"
+        [(ngModel)]="userParams.minAge">
     </div>
+    <div class="form-group px-2">
+      <label>To:</label>
+      <input type="number" class="form-control " style="width: 110px; height: 60PX;" name="maxAge"
+        [(ngModel)]="userParams.maxAge">
+    </div>
+    <div class="form-group px-2">
+      <label>Show:</label>
+      <select name="gender" style="width: 140px; height: 60PX; "[(ngModel)]="userParams.gender" class="form-control ">
+
+        <option *ngFor="let gender of genderList" [value]="gender.value">{{gender.display}}</option>
+      </select>
+    </div>
+    <button class="btn btn-primary ml-1"   type="submit"> Apply</button>
+    <button (click)="resetFilters()"  class="btn btn-info ml-1" type="submit"> Reset</button>
+    <div class="col">
+      <div class="btn-group float-right">
+          <button 
+          style="width: 170px; height: 60PX;"
+              type="button"
+              class="btn btn-primary" 
+              name='orderBy' 
+              (click)="loadMembers()"
+              btnRadio='lastActive'
+              [(ngModel)]="userParams.orderBy">Last Active</button>
+
+          <button 
+          style="width: 210px; height: 60PX;"
+              type="button"
+              class="btn btn-primary" 
+              name='orderBy' 
+              (click)="loadMembers()"
+              btnRadio='created'
+              [(ngModel)]="userParams.orderBy">New Members</button>
+      </div>
+  </div>
+  </form>
+</div>
+<div class="row">
+  <div *ngFor="let member of members" class="col-3">
+    <app-member-card [member]="member"></app-member-card>
+  </div>
+</div>
+<div class="d-flex justify-content-center" *ngIf="pagination">
+  <div class="row">
+    <pagination [boundaryLinks]="true" [totalItems]="pagination.totalItems" [itemsPerPage]="pagination.itemsPerPage"
+      [(ngModel)]="pagination.currentPage" (pageChanged)="pageChanged($event)" previousText="&lsaquo;"
+      nextText="&rsaquo;" firstText="&laquo;" lastText="&raquo;">
+    </pagination>
+  </div>
+
 </div>
