--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -5,12 +5,17 @@
   <app-text-input [formControl]='registerForm.controls["knownAs"]' [label]='"Nickname"'></app-text-input>
   <div class="form-group">
     <label class="control-label" style="margin: 0px 20px;">Gender: </label>
+    <div class="mt-2">
     <label class="radio-inline"style="margin: 0px 20px;">
       <input type="radio" value="male" formControlName='gender'>Male
     </label>
     <label class="radio-inline ml-3">
-      <input type="radio" value="female" formControlName='gender' class="ml-3">Female
+      <input type="radio" value="female" formControlName='gender' class="ml-4">Female
     </label>
+    <label class="radio-inline ml-3"style="margin: 0px 20px;">
+      <input type="radio" value="other" formControlName='gender' class="ml-4">Other
+    </label>
+  </div>
   </div>
   <app-date-input [formControl]='registerForm.controls["dateOfBirth"]' [label]='"Date Of Birth"' [maxDate]="maxDate"></app-date-input>
   <app-text-input [formControl]='registerForm.controls["city"]' [label]='"City"'></app-text-input>
