--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -22,6 +22,8 @@
         <div>
           <strong>Last Active:</strong>
           <p>{{member.lastActive | date:"mediumDate" }}</p>
+          <!-- <p>{{member.lastActive | timeago}}</p> -->
+
         </div>
         <div>
           <strong>Member since:</strong>
