--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -6,10 +6,14 @@
                 <i class="fa fa-user"></i></button></li>
             <li class="list-inline-item"><button (click)="addLike(member)" class="btn btn-primary">
                 <i class="fa fa-heart"></i></button></li>
-            <li class="list-inline-item"><button class="btn btn-light">
-                <i class="fa fa-envelope"></i></button></li>
-        </ul>
-    </div>
+                <li class="list-inline-item">
+                    <button 
+                        routerLink='/members/{{member.username}}' 
+                        [queryParams]='{tab: 3}'
+                        class="btn btn-light">
+                    <i class="fa fa-envelope"></i>
+                </button></li>
+            </ul>
     <div class="card-body p-2">
         <h6 class="card-title text-center mb-1"><i class="fa fa-user mr-2"></i>
             {{member.knownAs}},<br> {{member.age}}
