--- a/client/src/app/members/member-messages/member-messages.component.html
+++ b/client/src/app/members/member-messages/member-messages.component.html
@@ -1,1 +1,58 @@
-<p *ngFor="let message of messages">{{message?.content}}</p>
+<div>
+
+  <p *ngFor="let message of messages">{{message?.content}}</p>
+  <!-- <p *ngFor="let message of messages">{{message?.content}},  ,{{message.messageSent | date: "mediumDate" }}</p> -->
+
+
+</div>
+<div class="card">
+  <div class="card-body">
+    <div *ngIf="messages?.length === 0">
+      No messages yet... say hi by using the message box below
+    </div>
+
+    <ul *ngIf="messages?.length > 0" class="msg">
+      <li *ngFor="let message of messages">
+        <div>
+          <span class="msg-img float-left">
+            <img class="rounded-circle" style="max-height: 50px;"
+              src="{{message.senderPhotoUrl || './assets/user.png'}}" alt="{{message.senderUsername}}">
+          </span>
+          <div class="msg-body">
+            <div class="header">
+              <small class="text-muted">
+                <span class="fa fa-clock-o">{{message.messageSent | date: "mediumDate" }}</span>
+                <!-- unread -->
+                <span class="text-danger fa  fa-circle-o" *ngIf="!message.dateRead 
+                                    && message.senderUsername !== username">
+                  <!-- read -->
+                </span>
+                <span class="text-success fa fa-check-circle-o" *ngIf="message.dateRead 
+                                    && message.senderUsername !== username">
+
+                </span>
+              </small>
+            </div>
+            <p>{{message.content}}</p>
+          </div>
+        </div>
+      </li>
+    </ul>
+  </div>
+  <div class="card-footer">
+        <form #messageForm="ngForm" (ngSubmit)="sendMessage()" autocomplete="off">
+            <div class="input-group">
+                <input 
+                    name="messageContent"
+                    required
+                    [(ngModel)]="messageContent"
+                    type="text" 
+                    class="form-control input-sm" 
+                    placeholder="Send a private message">
+                <div class="input-group-append">
+                    <button [disabled]="!messageForm.valid" class="btn btn-primary" type="submit">Send</button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
