--- a/client/src/app/members/member-messages/member-messages.component.html
+++ b/client/src/app/members/member-messages/member-messages.component.html
@@ -1,14 +1,9 @@
 <div>
-
-  <p *ngFor="let message of messages">{{message?.content}}</p>
-  <!-- <p *ngFor="let message of messages">{{message?.content}},  ,{{message.messageSent | date: "mediumDate" }}</p> -->
-
-
 </div>
 <div class="card">
   <div class="card-body">
     <div *ngIf="messages?.length === 0">
-      No messages yet... say hi by using the message box below
+      No messages yet...
     </div>
 
     <ul *ngIf="messages?.length > 0" class="msg">
