--- a/client/src/app/nav/nav.component.css
+++ b/client/src/app/nav/nav.component.css
@@ -1,10 +1,14 @@
  .dropdown-toggle, .dropdown-item {
     cursor: pointer;
 }
-img{
+.img{
     max-height: 70px;
     border-radius: 50%;
     border: 2px solid #fff;
     display: inline;
     margin-right: 20px;
+}
+.logo{
+    max-width: 30%;
+    float: right;
 }
