--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,14 +1,14 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark mb-auto">
   <div class="container">
 
-    <a class="navbar-brand" routerLink='/' routerLinkActive="active">Social App</a>
-    <ul class="navbar-nav mr-auto">
+    <a class="navbar-brand" routerLink='/' routerLinkActive="active"><h3>Mate </h3></a>
+    <ul class="navbar-nav mr-auto ">
       <ng-container *ngIf="accountService.currentUser$ | async">
         <li class="nav-item">
           <a class="nav-link" routerLink='/members' routerLinkActive="active">Matches</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink='/lists' routerLinkActive="active">Lists</a>
+          <a class="nav-link" routerLink='/lists' routerLinkActive="active">Likes</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink='/messages' routerLinkActive="active">Messages</a>
@@ -17,11 +17,11 @@
           <a class="nav-link" routerLink='/admin' routerLinkActive="active">Admin</a>
         </li>
       </ng-container>
-      <!-- . -->
+   
     </ul>
 
     <div class="dropdown" *ngIf="(accountService.currentUser$ | async) as user" dropdown>
-      <img src="{{user.photoUrl || './assets/user.png'}}" alt="{{user.username}}">
+      <img src="{{user.photoUrl || './assets/user.png'}}" alt="{{user.username}}" class="img">
       <a class="dropdown-toggle text-light" dropdownToggle>Welcome {{user.knownAs | titlecase}}</a>
       <div class="dropdown-menu mt-3" *dropdownMenu>
         <a routerLink='/member/edit' class="dropdown-item">Edit Profile</a>
