--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -1,7 +1,7 @@
 <div class="card mt-3 mb-3">
     <div class="card-img-wrapper">
         <img src="{{member.photoUrl || './assets/user.png'}}" alt="{{member.knownAs}}" class="card-img-top">
-        <ul class="list-inline member-icons animate text-center">
+        <ul class="list-inline member-icons text-center">
             <li class="list-inline-item"><button routerLink='/members/{{member.username}}' class="btn btn-info">
                 <i class="fa fa-user"></i></button></li>
             <li class="list-inline-item"><button (click)="addLike(member)" class="btn btn-primary">
@@ -9,13 +9,13 @@
                 <li class="list-inline-item">
                     <button 
                         routerLink='/members/{{member.username}}' 
-                        [queryParams]='{tab: 3}'
+                        [queryParams]='{tab: 2}'
                         class="btn btn-light">
                     <i class="fa fa-envelope"></i>
                 </button></li>
             </ul>
     <div class="card-body p-2">
-        <h6 class="card-title text-center mb-1"><i class="fa fa-user mr-2"></i>
+        <h6 class="card-title text-center mb-1">
             {{member.knownAs}},<br> {{member.age}}
         </h6>
         <p class="card-text text-muted text-center">{{member.city}} ,<br> {{member.country}}</p>
