--- a/client/src/app/members/member-list/member-list.component.html
+++ b/client/src/app/members/member-list/member-list.component.html
@@ -13,20 +13,23 @@
     </div>
     <div class="form-group px-2">
       <label>Show:</label>
-      <select name="gender" style="width: 140px; height: 60PX;  background-color: rgb(87, 112, 184);" [(ngModel)]="userParams.gender" class="form-control ">
+      <select name="gender" 
+        [(ngModel)]="userParams.gender" class="form-control ">
 
         <option *ngFor="let gender of genderList" [value]="gender.value">{{gender.display}}</option>
       </select>
     </div>
     <button class="btn btn-primary ml-1" type="submit"> Apply</button>
     <button (click)="resetFilters()" class="btn btn-info ml-1" type="submit"> Reset</button>
+    <br>
     <div class="col">
-      <div class="btn-group float-right">
+      <br>
+      <div class="btn-group mt-3 float-left">
         Order by:
-        <button style="width: 170px; height: 60PX;" type="button" class="btn btn-primary" name='orderBy'
+        <button type="button" class="btn btn-info mx-3" name='orderBy'
           (click)="loadMembers()" btnRadio='lastActive' [(ngModel)]="userParams.orderBy">Last Active</button>
 
-        <button style="width: 210px; height: 60PX;" type="button" class="btn btn-primary" name='orderBy'
+        <button style="width: 210px; height: 60PX;" type="button" class="btn btn-info" name='orderBy'
           (click)="loadMembers()" btnRadio='created' [(ngModel)]="userParams.orderBy">New Members</button>
       </div>
     </div>
@@ -38,6 +41,8 @@
     <app-member-card [member]="member"></app-member-card>
   </div>
 </div>
+
+
 <div class="d-flex justify-content-center" *ngIf="pagination">
   <div class="row">
     <pagination [boundaryLinks]="true" [totalItems]="pagination.totalItems" [itemsPerPage]="pagination.itemsPerPage"
