--- a/client/src/app/members/photo-editor/photo-editor.component.html
+++ b/client/src/app/members/photo-editor/photo-editor.component.html
@@ -17,75 +17,38 @@
       <h3>Add Photos</h3>
       <div class="border border-dark">
         <div ng2FileDrop [ngClass]="{'nv-file-over': hasBaseDropzoneOver}" (fileOver)="fileOverBase($event)"
-          [uploader]="uploader" class="well bg-faded p-3 text-center  my-drop-zone">
+          [uploader]="uploader" class="well bg-faded p-3 text-center drop-zone">
           <i class="fa fa-upload fa-3x"></i>
           Drop zone
         </div>
       </div>
 
-      <!-- Multiple -->
       <input type="file" ng2FileSelect [uploader]="uploader" multiple /><br />
     </div>
-
-    <div class="col-md-9" style="margin-bottom: 40px" *ngIf="uploader?.queue?.length ">
-
-
-      <p>Number of photos: {{ uploader?.queue?.length }}</p>
 
       <table class="table">
         <thead>
           <tr>
-            <th width="50%">Name</th>
-            <th>Size</th>
+            <th >Name</th>
             <th>Actions</th>
           </tr>
         </thead>
         <tbody>
           <tr *ngFor="let item of uploader.queue">
             <td><strong>{{ item?.file?.name }}</strong></td>
-            <td *ngIf="uploader.options.isHTML5" nowrap>{{ item?.file?.size/1024/1024 | number:'.2' }} MB</td>
-            <td class="text-center">
-              <span *ngIf="item.isSuccess"><i class="glyphicon glyphicon-ok"></i></span>
-              <span *ngIf="item.isCancel"><i class="glyphicon glyphicon-ban-circle"></i></span>
-              <span *ngIf="item.isError"><i class="glyphicon glyphicon-remove"></i></span>
-            </td>
-
             <td nowrap>
-              <button type="button" class="btn btn-success btn-xs" (click)="item.upload()"
-                [disabled]="item.isReady || item.isUploading || item.isSuccess">
-                <span class="glyphicon glyphicon-upload"></span> Upload
+              <button type="button" class="btn btn-success btn-xs" (click)="item.upload()">
+                Upload
               </button>
-              <button type="button" class="btn btn-warning btn-xs" (click)="item.cancel()"
-                [disabled]="!item.isUploading">
-                <span class="glyphicon glyphicon-ban-circle"></span> Cancel
+              <button type="button" class="btn btn-success btn-xs" (click)="item.cancel()">
+                 Cancel
               </button>
               <button type="button" class="btn btn-danger btn-xs" (click)="item.remove()">
-                <span class="glyphicon glyphicon-trash"></span> Remove
+                 Remove
               </button>
             </td>
           </tr>
         </tbody>
       </table>
-
-      <div>
-        <div>
-          <div class="progress" style="">
-            <div class="progress-bar" role="progressbar" [ngStyle]="{ 'width': uploader.progress + '%' }"></div>
-          </div>
-        </div>
-        <button type="button" class="btn btn-success btn-s" (click)="uploader.uploadAll()"
-          [disabled]="!uploader.getNotUploadedItems().length">
-          <span class="glyphicon glyphicon-upload"></span> Upload all
-        </button>
-        <button type="button" class="btn btn-warning btn-s" (click)="uploader.cancelAll()"
-          [disabled]="!uploader.isUploading">
-          <span class="glyphicon glyphicon-ban-circle"></span> Cancel all
-        </button>
-        <button type="button" class="btn btn-danger btn-s" (click)="uploader.clearQueue()"
-          [disabled]="!uploader.queue.length">
-          <span class="glyphicon glyphicon-trash"></span> Remove all
-        </button>
-      </div>
-
     </div>
   </div>
